--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <ul id="menu" class="txt-style">
       <li><a href="#">top</a></li>
       <li><a href="#gallery-top">gallery</a></li>
-      <li><a href="#info">infomation</a></li>
+      <li><a href="#info">information</a></li>
       <li><a href="about.html">このサイトについて</a></li>
     </ul>
   </nav>
@@ -55,7 +55,7 @@
         <ul class="nav-list">
           <li><a href="#">top</a></li>
           <li><a href="#gallery-top">gallery</a></li>
-          <li><a href="#info">infomation</a></li>
+          <li><a href="#info">information</a></li>
           <li><a href="about.html">このサイトについて</a></li>
         </ul>
       </nav>
