--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     <ul id="menu" class="txt-style">
       <li><a href="index.html">top</a></li>
       <li><a href="index.html#gallery-top">gallery</a></li>
-      <li><a href="index.html#info">infomation</a></li>
+      <li><a href="index.html#info">information</a></li>
       <li><a href="#">このサイトについて</a></li>
     </ul>
   </nav>
@@ -55,7 +55,7 @@
         <ul class="nav-list">
           <li><a href="index.html">top</a></li>
           <li><a href="index.html#gallery-top">gallery</a></li>
-          <li><a href="index.html#info">infomation</a></li>
+          <li><a href="index.html#info">information</a></li>
           <li><a href="#">このサイトについて</a></li>
         </ul>
       </nav>
@@ -77,7 +77,7 @@
     <ul class="footer-list txt-style">
       <li><a href="index.html">top</a></li>
       <li><a href="index.html#gallery">gallery</a></li>
-      <li><a href="index.html#info">infomation</a></li>
+      <li><a href="index.html#info">information</a></li>
       <li><a href="#">このサイトについて</a></li>
     </ul>
     <p class="copy-r">&copy; 2019 すれの</p>
