--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <ul class="footer-list txt-style">
       <li><a href="#">top</a></li>
       <li><a href="#gallery-top">gallery</a></li>
-      <li><a href="#info">infomation</a></li>
+      <li><a href="#info">information</a></li>
       <li><a href="about.html">このサイトについて</a></li>
     </ul>
     <p class="copy-r">&copy; 2019 すれの</p>
